feat: add limit endpoint to get the user upload limit
